[gd_scene load_steps=4 format=3 uid="uid://bq3evr2rfuqg1"]

[ext_resource type="Script" path="res://Scenes/UI/Actions/card_button.gd" id="1_3dok3"]
[ext_resource type="PackedScene" uid="uid://djsxylqnw8otj" path="res://Scenes/CardGame/UI/card_ui.tscn" id="1_q0de3"]
[ext_resource type="Resource" uid="uid://k2gtw81xb7ta" path="res://Scenes/CardGame/Characters/Mao/Cards/fireball.tres" id="2_qbpii"]

[node name="CardButton" type="MarginContainer"]
offset_right = 12.0
offset_bottom = 12.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_3dok3")
metadata/_edit_lock_ = true

[node name="CardUI" parent="." instance=ExtResource("1_q0de3")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
card = ExtResource("2_qbpii")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
